ImplementarNominatimAks/nominatim-crear-bd.yaml
kind: Pod
apiVersion: v1
metadata:
  name: nominatim-crear-bd
  namespace: nominatim
  labels:
    app: nominatim-crear-bd
spec:
  containers:
    - name: nominatim-crear-bd
      image: cquirogaRegistry.azurecr.io/nominatim-arg
      command: ["sh", "/app/init.sh"]
      resources:
        requests:
          cpu: 250m
          memory: 128Mi
        limits:
          cpu: 500m
          memory: 512Mi
      volumeMounts:
        - mountPath: "/dataazure"
          name: volume
  volumes:
    - name: volume
      persistentVolumeClaim:
        claimName: nominatim-bd-arg
