ImplementarNominatimAks/nominatim-api-statefulset.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nominatim
  namespace: nominatim
spec:  
  selector:
    matchLabels:
      app: nominatim
  serviceName: "nominatim"
  replicas: 1 
  template:
    metadata:
      labels:
        app: nominatim
    spec:
      terminationGracePeriodSeconds: 5
      volumes:
        - name: nominatim-bd-arg
          persistentVolumeClaim:
            claimName: nominatim-bd-arg
      containers:
        - name: nominatim
          image: cquirogaRegistry.azurecr.io/nominatim-arg
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 5432
          command: ["sh", "/app/start.sh"]
          volumeMounts:
            - name: volumen
              mountPath: /var/lib/postgresql/11/main
            - name: nominatim-bd-arg
              mountPath: /data
          resources:
            requests: # minimum resources required
              cpu: 250m
              memory: 64Mi
            limits: # maximum resources allocated
              cpu: 500m
              memory: 512Mi

  volumeClaimTemplates:
  - metadata:
      name: volumen
    spec:
      accessModes: 
        - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: nominatim
spec:
  selector:
    app: nominatim
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
